--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -67,7 +67,7 @@
                 <div class="title2">
                     <img src="/img/message.png" id="chatting" class="chat-icon">
                     <img src="/img/myInfo.png" id="myInfo" class="my-info">
-                    <img src="/img/logout.png" id="logout" class="logout">
+                    <img src="/img/arrow_10940959.png" id="logout" class="logout">
                 </div>
             </div>
         </header>
