--- a/src/main/resources/templates/myClub.html
+++ b/src/main/resources/templates/myClub.html
@@ -129,6 +129,8 @@
               clubContent = currentItem.content;
               numberOfPeople = currentItem.maxMember;
               console.log("생성완료");
+              var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
               $('#clubList').append($('<div class="cardGroup" >\n'
                       + '    <tr>\n'
                       + '      <div class="cardParent">\n'
@@ -144,7 +146,7 @@
                       + '              <div>\n'
                       + '                <div class="card-body">\n'
                       + '                  <p class="card-title">' + clubName + '</p>\n'
-                      + '                  <p class="card-text">' + clubContent + '</p>\n'
+                      + '                  <p class="card-text">' + truncatedContent + '</p>\n'
                       + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
                       + '                </div>\n'
                       + '              </div>\n'
@@ -197,14 +199,14 @@
         </div>
         <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
           <img src="/img/message.png" id="chatting" class="chat-icon" style="float: left; cursor: pointer;  width: 35px; height: 35px; margin-top: 5px">
-          <img src="/img/logout.png" id="logout" class="my-info" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
+          <img src="/img/arrow_10940959.png" id="logout" class="my-info" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
         </div>
       </div>
     </header>
   </div>
 </div>
 
-<div id="clubList">
+<div id="clubsList">
 </div>
 <nav aria-label="Page navigation example" class="pageNav">
   <ul class="pagination">
