--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -17,7 +17,15 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <style>
+    @font-face {
+      font-family: "Cafe24Supermagic-Bold-v1.0";
+      src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
+      font-weight: 700;
+      font-style: normal;
+    }
+
     header {
+      font-family: "Cafe24Supermagic-Bold-v1.0";
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -29,6 +37,9 @@
       /* 전체 너비로 조절 */
       top: 0;
       margin-left: 0%;
+    }
+    body{
+      font-family: "Cafe24Supermagic-Bold-v1.0";
     }
 
     .title {
