--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -10,7 +10,15 @@
   <!--  <link th:href="@{/css/Bootstrap.min.css}"-->
   <!--        href="/css/Bootstrap.min.css" rel="stylesheet">-->
   <style>
+    @font-face {
+      font-family: "Cafe24Supermagic-Bold-v1.0";
+      src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
+      font-weight: 700;
+      font-style: normal;
+    }
+
     header {
+      font-family: "Cafe24Supermagic-Bold-v1.0";
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -21,6 +29,9 @@
       width: 80%; /* 전체 너비로 조절 */
       top: 0;
       margin-left: 10%;
+    }
+    body{
+      font-family: "Cafe24Supermagic-Bold-v1.0";
     }
 
     .title {
