--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -12,6 +12,10 @@ body {
     color: black;
 }
 
+/*.page{*/
+/*    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);*/
+/*}*/
+
 .all-container{
     border-radius: 15px;
     border: 3px solid grey;
@@ -170,6 +174,7 @@ body {
     width: 760px;
     border-radius: 10px;
     margin: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .board-box {
     background-color: #fff;
@@ -252,6 +257,7 @@ p {
     margin: 10px auto;
     width: 760px;
     height: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .item1 {
