--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,66 +1,90 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
-  <meta charset="UTF-8">
-  <title>withUs</title>
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"
-          integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-  <style>
-    .main{
-      padding-right: 20%;
-      padding-left: 20%;
-      display: flex;
-      flex-direction: column;
-    }
+    <meta charset="UTF-8">
+    <title>withUs</title>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+            integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <style>
 
+        @font-face {
+            font-family: "Cafe24Supermagic-Bold-v1.0";
+            src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
+            font-weight: 700;
+            font-style: normal;
+        }
 
-    .create{
-      margin-left: 15px;
-      font-weight: bolder;
-    }
+        /*전체*/
+        .main {
+            font-family: "Cafe24Supermagic-Bold-v1.0";
+            padding-right: 20%;
+            padding-left: 20%;
+            display: flex;
+            flex-direction: column;
+        }
 
-    .title2 {
-      float: right;
-      display: flex;
-      align-items: center;
-    }
+        /*박스 카드*/
+        .card{
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            transition: border-width 0.3s;
+        }
+        .card:hover {
+            border: 2px solid #556976; /* 테두리 두께와 색상 설정 */
+        }
 
-    .title2 img {
-      cursor: pointer;
-      width: 35px;
-      height: 35px;
-      margin: 5px;
-    }
+        .create {
+            margin-left: 15px;
+            font-weight: bolder;
+        }
 
+        .title2 {
+            float: right;
+            display: flex;
+            align-items: center;
+        }
+        .page{
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
+        .title2 img {
+            cursor: pointer;
+            width: 35px;
+            height: 35px;
+            margin: 5px;
+        }
 
-    .search-group{
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .list-group{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-    }
+        #searchText{
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
 
-    .search {
-      position: relative;
-      width: 35%;
-    }
+        .search-group {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
-    input {
-      width: 100%;
-      border: 1px solid #bbb;
-      border-radius: 8px;
-      padding: 10px 12px;
-      font-size: 14px;
-    }
+        .list-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+
+        .search {
+            position: relative;
+            width: 35%;
+        }
+
+        input {
+            width: 100%;
+            border: 1px solid #bbb;
+            border-radius: 8px;
+            padding: 10px 12px;
+            font-size: 14px;
+        }
 
         .search > img {
             position: absolute;
@@ -99,10 +123,14 @@
             margin-left: 20px;
         }
 
+        .btn-group .btn {
+            color: black;
+        }
+
         .btn {
             margin-right: 10px;
-            border: 1px solid black;
-            border-radius: 10px;
+            border: 0px;
+            /*border-radius: 10px;*/
             display: inline-block;
             font: inherit;
             line-height: 1.5em;
@@ -129,13 +157,13 @@
             cursor: pointer;
         }
 
-    .img-fluid{
-      width: 150px;
-      height: 150px;
-      border-radius: 1%;
-      margin-left: 10px;
-      float: left;
-    }
+        .img-fluid {
+            width: 150px;
+            height: 150px;
+            border-radius: 1%;
+            margin-left: 10px;
+            float: left;
+        }
 
 
         /*.img-fluid {*/
@@ -213,6 +241,8 @@
                         clubContent = currentItem.content;
                         console.log("생성완료");
 
+                        var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
                         $.ajax({
                             type: 'GET',
                             url: '/api/club/' + clubId + '/memberCount',
@@ -238,10 +268,9 @@
                                 + '            <div class="cardText">\n'
                                 + '              <div>\n'
                                 + '                <div class="card-body">\n'
-                                + '                  <p class="card-title">' + clubName + '</p>\n'
-                                + '                  <p class="card-text">' + clubContent + '</p>\n'
-                                + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
-
+                                + '                  <div class="card-title">' + clubName + '</div>\n'
+                                + '                  <div class="card-text">' + truncatedContent + '</div>\n'
+                                + '                  <div class="card-text">참가자 ' + memberCount + '명</div>\n'
                                 + '                </div>\n'
                                 + '              </div>\n'
                                 + '            </div>\n'
@@ -365,6 +394,8 @@
                             clubName = currentItem.clubTitle;
                             clubContent = currentItem.content;
                             console.log("생성완료");
+                            var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
                             $.ajax({
                                 type: 'GET',
                                 url: '/api/club/' + clubId + '/memberCount',
@@ -392,8 +423,8 @@
                                     + '              <div>\n'
                                     + '                <div class="card-body">\n'
                                     + '                  <p class="card-title">' + clubName + '</p>\n'
-                                    + '                  <p class="card-text">' + clubContent + '</p>\n'
-                                    + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
+                                    + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                                    + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
                                     + '                </div>\n'
                                     + '              </div>\n'
                                     + '            </div>\n'
@@ -459,6 +490,8 @@
                             clubName = currentItem.clubTitle;
                             clubContent = currentItem.content;
                             console.log("생성완료");
+                            var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
                             $.ajax({
                                 type: 'GET',
                                 url: '/api/club/' + clubId + '/memberCount',
@@ -486,8 +519,8 @@
                                     + '              <div>\n'
                                     + '                <div class="card-body">\n'
                                     + '                  <p class="card-title">' + clubName + '</p>\n'
-                                    + '                  <p class="card-text">' + clubContent + '</p>\n'
-                                    + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
+                                    + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                                    + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
                                     + '                </div>\n'
                                     + '              </div>\n'
                                     + '            </div>\n'
@@ -540,8 +573,9 @@
                         console.log(clubId);
                         clubName = currentItem.clubTitle;
                         clubContent = currentItem.content;
-
                         console.log("생성완료");
+                        var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
                         $.ajax({
                             type: 'GET',
                             url: '/api/club/' + clubId + '/memberCount',
@@ -568,8 +602,8 @@
                                 + '              <div>\n'
                                 + '                <div class="card-body">\n'
                                 + '                  <p class="card-title">' + clubName + '</p>\n'
-                                + '                  <p class="card-text">' + clubContent + '</p>\n'
-                                + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
+                                + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                                + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
                                 + '                </div>\n'
                                 + '              </div>\n'
                                 + '            </div>\n'
@@ -613,6 +647,8 @@
                             clubName = currentItem.clubTitle;
                             clubContent = currentItem.content;
                             console.log("생성완료");
+                            var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
                             $.ajax({
                                 type: 'GET',
                                 url: '/api/club/' + clubId + '/memberCount',
@@ -640,8 +676,8 @@
                                     + '              <div>\n'
                                     + '                <div class="card-body">\n'
                                     + '                  <p class="card-title">' + clubName + '</p>\n'
-                                    + '                  <p class="card-text">' + clubContent + '</p>\n'
-                                    + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
+                                    + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                                    + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
                                     + '                </div>\n'
                                     + '              </div>\n'
                                     + '            </div>\n'
@@ -696,6 +732,8 @@
                         clubName = currentItem.clubTitle;
                         clubContent = currentItem.content;
                         console.log("생성완료");
+                        var truncatedContent = clubContent.length > 10 ? clubContent.substring(0, 10) + '...' : clubContent;
+
                         $.ajax({
                             type: 'GET',
                             url: '/api/club/' + clubId + '/memberCount',
@@ -722,8 +760,8 @@
                                 + '              <div>\n'
                                 + '                <div class="card-body">\n'
                                 + '                  <p class="card-title">' + clubName + '</p>\n'
-                                + '                  <p class="card-text">' + clubContent + '</p>\n'
-                                + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
+                                + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                                + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
                                 + '                </div>\n'
                                 + '              </div>\n'
                                 + '            </div>\n'
@@ -740,7 +778,7 @@
         }
     </script>
 </head>
-<body style="background-image: url('/img/background.jpg'); background-size: cover; ">
+<body style="background-color: #98a9bc; background-size: cover; ">
 <div class="main ">
     <div class="title">
         <header>
@@ -759,7 +797,7 @@
                          style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
                     <img src="/img/myInfo.png" id="myInfo" class="my-info"
                          style="cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
-                    <img src="/img/logout.png" id="logout" class="my-info"
+                    <img src="/img/arrow_10940959.png" id="logout" class="my-info"
                          style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px">
                 </div>
             </div>
