--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -8,8 +8,16 @@
   <title>회원 정보</title>
 
   <style>
+    @font-face {
+      font-family: "Cafe24Supermagic-Bold-v1.0";
+      src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
+      font-weight: 700;
+      font-style: normal;
+    }
     body {
-      background-image: url('/img/background.jpg'); /* 이미지 URL로 설정 */
+      font-family: "Cafe24Supermagic-Bold-v1.0";
+      /*background-image: url('/img/background.jpg'); !* 이미지 URL로 설정 *!*/
+      background-color: #98a9bc;
       background-size: cover; /* 배경 이미지를 창에 맞추기 */
     }
 
@@ -204,7 +212,7 @@
         </div>
         <div class="title2" style="float: right; display: flex; align-items: center; gap: 20px;">
           <img src="/img/message.png" id="chatting" class="chat-icon" style="float: left; cursor: pointer;  width: 35px; height: 35px; margin-top: 5px">
-          <img src="/img/logout.png" id="logout" class="my-info" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
+          <img src="/img/arrow_10940959.png" id="logout" class="my-info" style="float: right; cursor: pointer; width: 35px; height: 35px; margin-top: 5px" >
         </div>
       </div>
     </header>
