--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -7,8 +7,16 @@
   <title>withUs</title>
 </head>
 <style>
+  @font-face {
+    font-family: "Cafe24Supermagic-Bold-v1.0";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+  }
   body {
-    background-image: url('/img/background.jpg'); /* 이미지 URL로 설정 */
+    /*background-image: url('/img/background.jpg'); !* 이미지 URL로 설정 *!*/
+    font-family: "Cafe24Supermagic-Bold-v1.0";
+    background-color: #98a9bc;
     background-size: cover; /* 배경 이미지를 창에 맞추기 */
   }
 
