#138 select-box Modify

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,22 @@
             margin: 5px;
         }
 
-        #searchText{
+        .list-group {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .search {
+            display: flex;
+            align-items: center;
+        }
+
+        #searchCategory,
+        #searchText {
+            border-radius: 10px;
+            border: none;
+            margin-right: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
 
