fix : MemberViewController url 수정 및 메인페이지 페이지네이션 수정, 클럽조회 목룩 반환타임 Page로 수정

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -182,13 +182,13 @@
 
     function updateProfile() {
       var memberId = /*[[${memberId}]]*/ '';
-      let url = '/api/member/updateProfilePage/' + memberId;
+      let url = '/api/member/' + memberId + '/updateProfilePage';
       location.href = url;
     }
 
     function invitingClicked(){
       var memberId = /*[[${memberId}]]*/ '';
-      let url = '/api/member/myHostingClubPage/'+memberId;
+      let url = '/api/member/' + memberId + '/myHostingClubPage'
       location.href = url;
     }
 
