--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -62,6 +62,11 @@
             width: 400px;
             padding: 10px;
             margin: 30px auto;
+            overflow : auto;
+        }
+
+        #updateBtn{
+            margin-right: 15px;
         }
 
         .main {
