#138 메인 페이지 글자 정렬 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -285,9 +285,9 @@
                                 + '            <div class="cardText">\n'
                                 + '              <div>\n'
                                 + '                <div class="card-body">\n'
-                                + '                  <div class="card-title">' + clubName + '</div>\n'
-                                + '                  <div class="card-text">' + truncatedContent + '</div>\n'
-                                + '                  <div class="card-text">참가자 ' + memberCount + '명</div>\n'
+                                + '                  <p class="card-title">' + clubName + '</p>\n'
+                                + '                  <p class="card-text">' + truncatedContent + '</p>\n'
+                                + '                  <p class="card-text">참가자 ' + memberCount + '명</p>\n'
                                 + '                </div>\n'
                                 + '              </div>\n'
                                 + '            </div>\n'
