fix : MemberViewController url 수정 및 메인페이지 페이지네이션 수정, 클럽조회 목룩 반환타임 Page로 수정

--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -227,10 +227,10 @@
 
           if (sender === username) {
             chatDiv.addClass('chat ch1');
-            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/profilePage/' + loginId + '\'"><i class="fa-solid fa-user"></i></div>')
+            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/' + loginId + '/profilePage' + '\'"><i class="fa-solid fa-user"></i></div>')
           } else {
             chatDiv.addClass('chat ch2');
-            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/profilePage/' + guestId + '\'"><i class="fa-solid fa-user"></i></div>')
+            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/' + guestId + '/profilePage' + '\'"><i class="fa-solid fa-user"></i></div>')
 
           }
 
@@ -290,10 +290,10 @@
 
           if (senderName === username) {
             chatDiv.addClass('chat ch1');
-            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/profilePage/' + loginId + '\'"><i class="fa-solid fa-user"></i></div>')
+            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/' + loginId + '/profilePage' + '\'"><i class="fa-solid fa-user"></i></div>')
           } else {
             chatDiv.addClass('chat ch2');
-            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/profilePage/' + guestId + '\'"><i class="fa-solid fa-user"></i></div>')
+            chatDiv.append('<div class="icon" onclick="location.href=\'' + host + '/api/member/' + guestId + '/profilePage' + '\'"><i class="fa-solid fa-user"></i></div>')
           }
           // chatDiv.append('<div class="icon"><i class="fa-solid fa-user"></i></div>')
           chatDiv.append('<div class="textbox">' + content + '</div>');
