--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -125,7 +125,7 @@
   <p style="font-size: 300%;">Comment</p>
   <p><textarea id="commentContent" placeholder="내용 입력" style="width: 1000px;height:100px;font-size:20px;"></textarea></p>
   <div class="on">
-    <button type="button" class="btn btn-dark" onclick="sendNoticeRequest()">등록</button>
+    <button type="button" class="btn btn-dark" onclick="sendCommentRequest()">등록</button>
   </div>
 
   <div class="card" id="comment">
@@ -435,8 +435,9 @@
 
 
 
-  function sendNoticeRequest(){
+  function sendCommentRequest(){
     const noticeId = [[${noticeId}]];
+    const clubId = [[${clubId}]];
     let content = $('#commentContent').val();
 
     if(!content){
@@ -450,6 +451,7 @@
       contentType:"application/json",
       dataType:"json",
       data : JSON.stringify({
+        "clubId" : clubId,
         "content" : content
       }),
       success : function (response){
