--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -67,6 +67,7 @@
 
         #updateBtn{
             margin-right: 15px;
+            margin-left: 10px;
         }
 
         .main {
@@ -116,10 +117,12 @@
             if (isSameMember) {
                 $('#createChatting').hide();
                 $('#inviting').hide();
+                $('#deleteBtn').show();
                 $('#updateBtn').show();
             } else {
                 $('#createChatting').show();
                 $('#inviting').show();
+                $('#deleteBtn').hide();
                 $('#updateBtn').hide();
             }
 
@@ -225,17 +228,50 @@
         }
 
 
-    function updateProfile() {
-      var memberId = /*[[${memberId}]]*/ '';
-      let url = '/api/member/' + memberId + '/updateProfilePage';
-      location.href = url;
-    }
+        function updateProfile() {
+            var memberId = /*[[${memberId}]]*/ '';
+            let url = '/api/member/' + memberId + '/updateProfilePage';
+            location.href = url;
+        }
 
-    function invitingClicked(){
-      var memberId = /*[[${memberId}]]*/ '';
-      let url = '/api/member/' + memberId + '/myHostingClubPage'
-      location.href = url;
-    }
+        function invitingClicked(){
+            var memberId = /*[[${memberId}]]*/ '';
+            let url = '/api/member/' + memberId + '/myHostingClubPage'
+            location.href = url;
+        }
+
+        function resign(){
+            var confirmLogout = window.confirm('탈퇴하시겠습니까?');
+            var memberId = /*[[${memberId}]]*/ '';
+
+            if (confirmLogout) {
+
+                $.ajax({
+                    type: 'DELETE',
+                    url: '/api/member/'+ memberId,
+                    contentType: ''
+                })
+                .done(function (res, status, xhr) {
+                    alert("회원탈퇴 완료");
+                    $.ajax({
+                        type: 'Post',
+                        url: '/api/member/logout',
+                        contentType: ''
+                    })
+                    .done(function (res, status, xhr) {
+                        window.location.href = host + '/'
+                    })
+                    .fail(function (xhr, status, error) {
+                        console.error('로그아웃 요청 API 에러', error);
+                    })
+                })
+                .fail(function (xhr, status, error) {
+                    console.error('회원탈퇴 요청 API 에러', error);
+                })
+
+            }
+
+        }
 
     </script>
 </head>
@@ -286,9 +322,12 @@
         </div>
     </div>
 
-    <div>
+    <div style="display: flex; margin-left: 70%">
+        <button type="button"
+                class="btn btn-danger"
+                onclick="resign()">탈퇴하기
+        </button>
         <button type="button" id="updateBtn"
-                style="float: right; margin-top: 20px; margin-left: 83%"
                 class="btn btn-primary" onclick="updateProfile()">수정하기
         </button>
     </div>
