--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -115,7 +115,7 @@
       success:function (response){
         if(response.msg === '프로필 수정 성공'){
 
-          window.location.href = host + '/api/member/profilePage/' + memberId;
+          window.location.href = host + '/api/member/' + memberId+ '/profilePage';
 
         } else{
           console.error('프로필 수정 실패', response);
