fix : member 관련 url수정

--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -24,7 +24,7 @@
             });
 
             $("#myInfo").on("click", function(e) {
-                window.location.href = host + '/api/member/' + memberId + '/profilePage/';
+                window.location.href = host + '/api/member/' + memberId + '/profilePage';
             });
 
             $("#logout").on("click", function(e) {
