--- a/src/main/resources/templates/club/post-club.html
+++ b/src/main/resources/templates/club/post-club.html
@@ -27,7 +27,7 @@
             });
 
             $("#myInfo").on("click", function(e) {
-                window.location.href = host + '/api/member/profilePage/' + memberId;
+                window.location.href = host + '/api/member/' + memberId + '/profilePage';
             });
 
             $("#logout").on("click", function(e) {
