--- a/src/main/resources/templates/auth/loginPage.html
+++ b/src/main/resources/templates/auth/loginPage.html
@@ -43,7 +43,7 @@
 <body>
 <div style="text-align: center">
 
-  <h1 style="font-size: 60px; padding-top: 40px">withUs</h1>
+  <h1 th:onclick="|location.href='@{/}'|" style="font-size: 60px; padding-top: 40px; cursor: pointer" >withUs</h1>
   <form id="loginForm" action ="/api/member/login" method="post">
     <div style="padding: 50px 35% 0px 35%; ">
       <div style="padding: 5px 0 5px 0 ">
