--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -44,18 +44,25 @@
 
             if(isClubMember === true){
                 $('#Notice-post').show();
+                // $("#leaveClubButton").show();
+
             }else{
                 $('#Notice-post').hide();
+                $('#leaveClubButton').hide();
             }
+
 
             console.log(isHost);
             if (isHost === true) {
                 $('#reviseButton').show();
                 $('#deleteButton').show();
+                $('#leaveClubButton').hide();
             }else{
                 $('#reviseButton').hide();
                 $('#deleteButton').hide();
             }
+
+
 
             $("#loginBtn").on("click", function(e) {
                 window.location.href = host + '/api/member/loginPage';
@@ -79,7 +86,7 @@
                 if (confirmLogout) {
 
                     $.ajax({
-                        type: 'Post',
+                        type: 'POST',
                         url: '/api/member/logout',
                         contentType: ''
                     })
@@ -277,6 +284,9 @@
                 </div>
 
             </div>
+            <button id = "leaveClubButton">
+                클럽 탈퇴
+            </button>
         </section>
     </div>
 
