--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -260,7 +260,7 @@
       <h2 class="withUs" onclick="location.href=host + '/'">withUs</h2>
     </div>
     <div class="title2">
-      <i class="icon fa-solid fa-user" onclick="location.href=host + '/api/member/profilePage/' + memberId"></i>
+      <i class="icon fa-solid fa-user" onclick="location.href=host + '/api/member/' + memberId + '/profilePage'"></i>
       <i class="arrow-icon fa-solid fa-arrow-rotate-left" onclick="history.back()"></i>
     </div>
   </header>
