--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -66,7 +66,7 @@
             });
 
             $("#myInfo").on("click", function(e) {
-                window.location.href = host + '/api/member/profilePage/' + memberId;
+                window.location.href = host + '/api/member/' + memberId + '/profilePage';
             });
 
             $("#create").on("click", function(e) {
