fix : 채팅방내 프로필 imgURL 버그 수정

--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -209,6 +209,13 @@
             hostImg = res.data.receiverImg;
           }
 
+          if (guestImg === undefined || guestImg === null) {
+            guestImg = '/img/default.png';
+          }
+          if (hostImg === undefined || hostImg === null) {
+            hostImg = '/img/default.png';
+          }
+
           $("#title").text(roomName);
         })
         .fail(function (xhr, status, error) {
