#152 html css 수정

--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -246,7 +246,7 @@
                                 let id = res.id;
                                 const card = '' +
                                     '  <div class="board-box" onclick="noticePage(\'' + id + '\')">\n' +
-                                    '                     <p>' + title + '</p>\n' +
+                                    '                     <div style="font-weight: bold; padding-bottom: 100px;">' + title + '</div>\n' +
                                     '                    </div>';
                                 $('#notice-box').append(card);
                             });
