노티스 디테일 페이지 수정 과 #150 삭제 스케줄러 구현

--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -264,6 +264,7 @@
       },
       error:function (){
         alert("클럽 멤버가 아닙니다");
+        window.location.href = host + '/api/club/main-club/'+clubId;
       }
     })
 
