#152 html css 수정

--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -318,10 +318,12 @@ p {
 .invited-user {
     text-align: center; /* 사용자 이름 텍스트를 가운데 정렬합니다 */
 }
-.leaveClubButton{
+#leaveClubButton{
     border-radius: 10px;
-    border:1px none;
+    background:none;
+    border: 1px solid black;
+    font-family: "Cafe24Supermagic-Bold-v1.0", cursive;
 }
-.leaveClubButton:hover {
+#leaveClubButton:hover {
     background: #b6d4fe;
 }
